core/ingress/amateurs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amateurs
  namespace: amateurs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.amateurs.co.kr
      secretName: amateurs-tls
  rules:
    - host: api.amateurs.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amateurs
                port:
                  number: 8080
